# TM_crossdev_2025

./: .clang-format  CMakeLists.txt
docs/docsrc/: ReportCrossDev_p1_Gilles_Van_pellicom.tex
src/: main.cpp
src/app/handlers/: Preferences.cpp  Preferences.h
src/ui/dialogs/: SettingsDialog.cpp  SettingsDialog.h
src/ui/widgets/: DisplayWidget.cpp  DisplayWidget.h
src/ui/windows/: MainWindow.cpp  MainWindow.h
